--- a/hm.css
+++ b/hm.css
@@ -1,135 +1,40 @@
 .header-mobile {
-    position: fixed;
-    width: 100%;
-    z-index: 3;
-    background-color: green;
+  background-color: green;
+  padding: 1rem;
+  align-items: center;
 }
 
+.nav-item-mobile {
+  display: block;
+}
 
-.header-mobile a
+.always-visible {
+  display: flex;
+  justify-content: space-between;
+  /* padding: 0 1rem 0 1rem; */
+}
+.not-always-visible
 {
-    font-family: Poppins;
+  display: flex;
+  flex-direction: column;
 }
-
-.header-mobile ul {
-    list-style: none;
-    overflow: hidden;
-}
-
-.header-mobile li a {
-    display: block;
-    padding: 20px 20px;
-    text-decoration: none;
-}
-
-.header-mobile li a:hover,
-.header-mobile .menu-btn:hover {
-    background-color: white;
-}
-
-.header-mobile .logo-mobile {
-    display: block;
-    float: left;
-    font-size: 2em;
-    padding: 10px 20px;
-    text-decoration: none;
-}
-
-/* menu */
-
-.header-mobile .menu {
-    clear: both;
-    max-height: 0;
-    transition: max-height .2s ease-out;
-}
-
-/* menu icon */
-
-.header-mobile .menu-icon {
-    cursor: pointer;
-    display: inline-block;
-    float: right;
-    padding: 28px 20px;
-    position: relative;
-    user-select: none;
-}
-
-.header-mobile .menu-icon .navicon {
-    background: #333;
-    display: block;
-    height: 2px;
-    position: relative;
-    transition: background .2s ease-out;
-    width: 18px;
-}
-
-.header-mobile .menu-icon .navicon:before,
-.header-mobile .menu-icon .navicon:after {
-    background: #333;
-    content: '';
-    display: block;
-    height: 100%;
-    position: absolute;
-    transition: all .2s ease-out;
-    width: 100%;
-}
-
-.header-mobile .menu-icon .navicon:before {
-    top: 5px;
-}
-
-.header-mobile .menu-icon .navicon:after {
-    top: -5px;
-}
-
-/* menu btn */
-
-.header-mobile .menu-btn {
-    display: none;
-}
-
-.header-mobile .menu-btn:checked~.menu {
-    max-height: 240px;
-}
-
-.header-mobile .menu-btn:checked~.menu-icon .navicon {
-    background: transparent;
-}
-
-.header-mobile .menu-btn:checked~.menu-icon .navicon:before {
-    transform: rotate(-45deg);
-}
-
-.header-mobile .menu-btn:checked~.menu-icon .navicon:after {
-    transform: rotate(45deg);
-}
-
-.header-mobile .menu-btn:checked~.menu-icon:not(.steps) .navicon:before,
-.header-mobile .menu-btn:checked~.menu-icon:not(.steps) .navicon:after {
-    top: 0;
-}
-
-/* 48em = 768px */
-
-@media (min-width: 48em) {
-    .header-mobile li {
-        float: left;
-    }
-
-    .header-mobile li a {
-        padding: 20px 30px;
-    }
-
-    .header-mobile .menu {
-        clear: none;
-        float: right;
-        max-height: none;
-    }
-
-    .header-mobile .menu-icon {
-        display: none;
-    }
+.not-always-visible a
+{
+  text-align: center;
 }
 
 
+.header-mobile a{
+  font-family: Poppins;
+  margin: 1rem;
+  text-decoration: none;
+  color: white;
+  text-transform: lowercase;
+}
 
+.header-mobile button{
+  font-family: Poppins;
+  margin: 1rem;
+  text-decoration: none;
+  text-transform: lowercase;
+}
