--- a/main.css
+++ b/main.css
@@ -11,6 +11,18 @@ center {
     padding: 100px 0px 20px 20px;
     background-color: rgb(199, 199, 199);
 }
+
+@media screen and (max-width:768px) {
+    center
+    {
+        flex-direction: column;
+    }
+    .sidebar
+    {
+        width: inherit;
+        min-width: inherit;
+    }
+}
 .main {
     width: 100%;
     text-align: left;
