--- a/header.css
+++ b/header.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 .header {
-    background-color: green;
+    background-color: rgb(62, 82, 62);
     min-width: 768px;
     display: flex;
     justify-content: center;
@@ -19,6 +19,9 @@
 
 .logo {
     display: inline;
+    margin-left:0px;
+    position: relative;
+    nav-left: 0px;
 }
 
 .nav {
@@ -36,11 +39,10 @@
     color: white;
     text-transform: lowercase;
 }
-
-#rightnav {
+ #rightnav {
     display: flex;
     align-items: center;
-}
+ }
 
 button.darkmode {
     background: none;
@@ -87,7 +89,7 @@ svg path {
 
 @media (min-width:768px) {
     .logo {
-        display: inline;
+        /* display: inline; */
 
     }
 }
@@ -99,9 +101,9 @@ svg path {
         display: none;
     }
 }
-@media screen and (min-width:768px) {
+/* @media screen and (min-width:768px) {
     .header-mobile
     {
         display: none;
     }
-}
+} */
