--- a/main.css
+++ b/main.css
@@ -1,16 +1,35 @@
 center {
     display: flex;
+    flex-direction: row-reverse;
     width: 100%;
     justify-content: right;
 }
 .sidebar {
     font-family: poppins;
-    width: 300px;
+    width: 160px;
     min-width: 300px;
     padding-top: 100px;
+    right: 1000px;
+    padding-top: 16px;
+    
     padding: 100px 0px 20px 20px;
-    background-color: rgb(199, 199, 199);
+    background-color: rgb(27, 25, 25);
 }
+
+/* 
+/* .sidebar {
+     padding-top: 100px; 
+    height: 100%;
+    width: 160px;
+    padding: 100px 0px 20px 20px;
+    position: fixed;
+    z-index: 1;
+     top: 0; 
+    /* left: 0; */
+    /* background-color: rgb(69, 73, 59);
+    overflow-x: hidden;
+    padding-top: 16px;
+  } */ */ */
 
 @media screen and (max-width:768px) {
     center
@@ -25,11 +44,11 @@ center {
 }
 .main {
     width: 100%;
-    text-align: left;
-    display: flex;
+    /* text-align: left; */
+    /* display: flex; */
     justify-content: right;
     padding-top: 100px;
-    padding: 50px 0 0 0;
+    padding: 5px 0 0 0;
     font-family: poppins;
     /* line-height: 2; */
 }
@@ -63,12 +82,23 @@ h3
     padding-right: 2em;
 
 }
-.sidebar a {
-    padding: 0.2rem 0px 0.2rem 0px;
+/* .sidebar a {
+    padding: 0rem 0px 0.2rem 0px;
+    left:0px;
     text-decoration: none;
     font-size: 1rem;
-    color: black;
+    color: rgb(20, 20, 20);
     display: block;
     text-align: left;
     text-transform: lowercase;
-}
+} */
+
+.sidebar a {
+    padding: 6px 8px 6px 16px;
+    text-decoration: none;
+    right:100px;
+    font-size: 20px;
+    color: white;
+    display: block;
+    text-align: left;
+  }
